# rust-api-starter

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  diesel_commands.txt
migrations/2025-05-20-104215_init/: up.sql
src/: main.rs  router.rs  schema.rs
src/auth/: handlers.rs  mod.rs  requests.rs  router.rs
src/lib/: db.rs  errors.rs  jwt.rs  mod.rs  state.rs
src/users/: models.rs  service.rs
