[package]
name = "rust-api-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "chrono", "serde_json"] }
r2d2 = "0.8.10"
dotenvy = "0.15.7"
bcrypt = "0.17.0"
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
